--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,1 +1,219 @@
-<p>contact works!</p>
+<div class="contact">
+   <div class="banner">
+      <div class="container">
+         <div class="contact-layout">
+            <h1>We are eager to <span> get in touch </span><br> with you as well </h1>
+            <h6>you can drop us an email at <span>hello@uxmint.in</span></h6>
+         </div>
+      </div>
+   </div>
+   <div class="contact-layout1">
+      <div class="row">
+         <div class="d-flex">
+            <ul ngbNav #nav="ngbNav" [(activeId)]="active" class="nav-pills" orientation="vertical">
+            <li ngbNavItem="query">
+               <div class="col-md-12 layout-left">
+                  <a ngbNavLink>Query & <br> Collaboration</a>
+               </div>
+               <ng-template ngbNavContent>
+                  <div  class="col-md-12 layout-right">
+                     <div class="layouts">
+                        <h2>Let us Know what you are looking <br> forward to discuss.</h2>
+                        <div class="row layouts1">
+                           <div class="col-md-6">
+                              <label class="checkbox">UX Consulting
+                              <input type="checkbox" checked="checked">
+                              <span class="checkmark"></span>
+                              </label>
+                              <label class="checkbox">Strategy Design
+                              <input type="checkbox">
+                              <span class="checkmark"></span>
+                              </label>
+                              <label class="checkbox">Mobile App Design
+                              <input type="checkbox">
+                              <span class="checkmark"></span>
+                              </label>
+                              <label class="checkbox">Product Design
+                              <input type="checkbox">
+                              <span class="checkmark"></span>
+                              </label>
+                              <label class="checkbox">Something more
+                              <input type="checkbox">
+                              <span class="checkmark"></span>
+                              </label>
+                           </div>
+                           <div class="col-md-6">
+                              <label class="checkbox">UX Resourcing
+                              <input type="checkbox" checked="checked">
+                              <span class="checkmark"></span>
+                              </label>
+                              <label class="checkbox">Usability Testing
+                              <input type="checkbox">
+                              <span class="checkmark"></span>
+                              </label>
+                              <label class="checkbox">Branding
+                              <input type="checkbox">
+                              <span class="checkmark"></span>
+                              </label>
+                              <label class="checkbox">Digital Transformation
+                              <input type="checkbox">
+                              <span class="checkmark"></span>
+                              </label>
+                           </div>
+                        </div>
+                        <form  id="contactForm" name="contactForm" class="contactForm">
+                           <div class="row">
+                              <div class="col-md-5">
+                                 <div class="form-group bg-light">
+                                    <label class="label" for="name">Name</label>
+                                    <input type="text" class="form-control" name="name" id="name" placeholder=" Your name">
+                                 </div>
+                              </div>
+                              <div class="col-md-5">
+                                 <div class="form-group bg-light">
+                                    <label class="label" for="email">Email </label>
+                                    <input type="email" class="form-control" name="email" id="email" placeholder=" Your@email.com">
+                                 </div>
+                              </div>
+                              <div class="col-md-5">
+                                 <div class="form-group bg-light">
+                                    <label class="label" for="name">Phone</label>
+                                    <input type="text" class="form-control" name="number" id="number" placeholder=" Your phone number">
+                                 </div>
+                              </div>
+                              <div class="col-md-5">
+                                 <div class="form-group bg-light">
+                                    <label class="label" for="name">Business/ Organisation</label>
+                                    <input type="text" class="form-control" name="company" id="company" placeholder=" Your company">
+                                 </div>
+                              </div>
+                              <div class="col-md-10">
+                                 <div class="form-group bg-light">
+                                    <label class="label" for="#">Message</label>
+                                    <textarea name="message" class="form-control" id="message" cols="30" rows="4" placeholder=" Start typing here..."></textarea>
+                                 </div>
+                              </div>
+                              <div class="button">
+                                 <div class="btn btn-white">Submit <img src="./assets/images/rightarrow-white.svg"></div>
+                              </div>
+                           </div>
+                        </form>
+                     </div>
+                  </div>
+               </ng-template>
+            </li>
+            <li ngbNavItem="career">
+               <div class="col-md-12 layout-left1">
+                  <a ngbNavLink>Career <br>Opportunities</a>
+               </div>
+               <ng-template ngbNavContent>
+                  <div  class="col-md-12 layout-right">
+                     <div class="layouts">
+                        <h2>Hey, Fill in the details below<br> to join us.</h2>
+                        <div class="row">
+                           <div class="col-md-6">
+                              <label class="checkbox">UX Designer
+                              <input type="checkbox" checked="checked">
+                              <span class="checkmark"></span>
+                              </label>
+                              <label class="checkbox">Product Designer
+                              <input type="checkbox">
+                              <span class="checkmark"></span>
+                              </label>
+                              <label class="checkbox">Front-End Developer
+                              <input type="checkbox">
+                              <span class="checkmark"></span>
+                              </label>
+                           </div>
+                           <div class="col-md-6">
+                              <label class="checkbox">UI Designer
+                              <input type="checkbox" checked="checked">
+                              <span class="checkmark"></span>
+                              </label>
+                              <label class="checkbox">Brand Consultant
+                              <input type="checkbox">
+                              <span class="checkmark"></span>
+                              </label>
+                              <label class="checkbox">Mobile Developer
+                              <input type="checkbox">
+                              <span class="checkmark"></span>
+                              </label>
+                           </div>
+                        </div>
+                        <form  id="contactForm" name="contactForm" class="contactForm">
+                           <div class="row">
+                              <div class="col-md-5">
+                                 <div class="form-group bg-light">
+                                    <label class="label" for="name">Name</label>
+                                    <input type="text" class="form-control" name="name" id="name" placeholder=" Your name">
+                                 </div>
+                              </div>
+                              <div class="col-md-5">
+                                 <div class="form-group bg-light">
+                                    <label class="label" for="email">Email </label>
+                                    <input type="email" class="form-control" name="email" id="email" placeholder=" Your@email.com">
+                                 </div>
+                              </div>
+                              <div class="col-md-5">
+                                 <div class="form-group bg-light">
+                                    <label class="label" for="name">Phone</label>
+                                    <input type="text" class="form-control" name="name" id="name" placeholder=" Your phone number">
+                                 </div>
+                              </div>
+                              <div class="col-md-5">
+                                 <div class="form-group bg-light">
+                                    <label class="label" for="name">Portfolio URL</label>
+                                    <input type="text" class="form-control" name="name" id="name" placeholder=" Your Portfolio link">
+                                 </div>
+                              </div>
+                              <div class="col-md-10">
+                                 <div class="form-group bg-light">
+                                    <label for="exampleFormControlFile1" class="label">Attach Resume</label>
+                                    <input type="file" class="form-control-file" id="exampleFormControlFile1" placeholder=" Or drag & drop file here ">
+                                 </div>
+                              </div>
+                              <div class="button">
+                                 <div class="btn btn-white">Submit <img src="./assets/images/rightarrow-white.svg"></div>
+                              </div>
+                           </div>
+                        </form>
+                     </div>
+                  </div>
+               </ng-template>
+            </li>
+            </ul>
+            <div [ngbNavOutlet]="nav" class="ml-4"></div>
+         </div>
+      </div>
+   </div>
+   <div class="contact-layout2">
+      <div class="row">
+         <div class="col-md-6">
+            <div class="layout-left">
+               <h3>
+                  you can drop in to the premises <br> between 10.00 AM to 6.00 PM, <br> Monday to Friday
+               </h3>
+               <p>
+                  Plot no, 16, Nethaji Street,<br> Annai Indira Nagar, Okkiyam, Thoraipakkam,<br> Chennai, Tamilnadu - 600096
+               </p>
+               <h4>Landmark: Opp to Holiday Inn</h4>
+            </div>
+         </div>
+         <div class="col-md-6 only-mobile">
+            <img src="./assets/images/about/map.png">
+         </div>
+      </div>
+   </div>
+   <div class="contact-layout3">
+      <div class="row">
+         <div class="col-md-6 layout-left">
+            <h3>INDIA</h3>
+            <P>Alta vida, 4b, Thaiyur, near Kelambakkam,<br> Old Mahabalipuram Road, Chennai - 603103</P>
+         </div>
+         <div class="col-md-6 layout-left">
+            <h3>USA</h3>
+            <p>651 N Broad St Suite 206<br> Middletown, Delaware - 19709</p>
+         </div>
+      </div>
+   </div>
+</div>
