--- a/src/app/modules/services/components/interface-design/interface-design.component.scss
+++ b/src/app/modules/services/components/interface-design/interface-design.component.scss
@@ -16,10 +16,16 @@
     h1{
         font-size: 56px;
         color: #000000;
+        @include media-breakpoint-down(sm){
+            font-size: 36px;
+        }
     }
     p{
         font-size: 30px;
         color: #000000;
+        @include media-breakpoint-down(sm){
+            font-size: 24px;
+        }
     }
     .banner-content{
         padding: 300px 0px;
