--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,13 +7,13 @@
                     <h3>What We Do</h3>
                 </li>
                 <li>
-                    <a routerLink="works">Work</a>
+                    <a routerLink="/works" (click)="activeModal.close()">Work</a>
                 </li>
                 <li>
-                    <a routerLink="services">Services</a>
+                    <a routerLink="/services" (click)="activeModal.close()">Services</a>
                 </li>
                 <li>
-                    <a routerLink="engagement-models">Engagement Models</a>
+                    <a routerLink="/engagement-models" (click)="activeModal.close()">Engagement Models</a>
                 </li>
             </ul>
         </div>
@@ -23,16 +23,16 @@
                     <h3>Who We Are</h3>
                 </li>
                 <li>
-                    <a routerLink="about-us">About Us</a>
+                    <a routerLink="/about-us" (click)="activeModal.close()">About Us</a>
                 </li>
                 <li>
-                    <a routerLink="blogs">Blogs</a>
+                    <a routerLink="/blogs" (click)="activeModal.close()">Blogs</a>
                 </li>
                 <li>
-                    <a routerLink="careers">Career</a>
+                    <a routerLink="/careers" (click)="activeModal.close()">Career</a>
                 </li>
                 <li>
-                    <a routerLink="contact-us">Contact</a>
+                    <a routerLink="/contact-us" (click)="activeModal.close()">Contact</a>
                 </li>
             </ul>
         </div>
@@ -42,19 +42,19 @@
                     <h3>Content</h3>
                 </li>
                 <li>
-                    <a routerLink="service/user-experience">User Experience</a>
+                    <a routerLink="/service/user-experience" (click)="activeModal.close()">User Experience</a>
                 </li>
                 <li>
-                    <a routerLink="service/interface-design">Interface Design</a>
+                    <a routerLink="/service/interface-design" (click)="activeModal.close()">Interface Design</a>
                 </li>
                 <li>
-                    <a routerLink="service/ui-development">UI Development</a>
+                    <a routerLink="/service/ui-development" (click)="activeModal.close()">UI Development</a>
                 </li>
                 <li>
-                    <a routerLink="service/end-to-end-development">End to End Development</a>
+                    <a routerLink="/service/end-to-end-development" (click)="activeModal.close()">End to End Development</a>
                 </li>
                 <li>
-                    <a routerLink="service/usability-testing">Usability Testing</a>
+                    <a routerLink="/service/usability-testing" (click)="activeModal.close()">Usability Testing</a>
                 </li>
             </ul>
         </div>
@@ -66,13 +66,13 @@
             <h5>For a quick response</h5>
             <ul>
                 <li>
-                    <a routerLink="mailto:enquire@uxmint.in">hello@uxmint.in</a>
+                    <a routerLink="mailto:enquire@uxmint.in" (click)="activeModal.close()">hello@uxmint.in</a>
                 </li>
                 <li>
-                    <a routerLink="tel:+91 9884053886">+91 9884053886</a>
+                    <a routerLink="tel:+91 9884053886" (click)="activeModal.close()">+91 9884053886</a>
                 </li>
                 <li>
-                    <a routerLink="tel:+91 9940410072">+91 9940410072</a>
+                    <a routerLink="tel:+91 9940410072" (click)="activeModal.close()">+91 9940410072</a>
                 </li>
             </ul>
         </div>
