--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,8 +43,8 @@ $uxmint-theme: mat-light-theme((
 /* Font */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;700&display=swap');
 
-html, body { height: 100%;overflow-x: hidden; }
-body { margin: 0; font-family: 'Inter', sans-serif; }
+// html, body { height: 100%;overflow-x: hidden; }
+
 app-root{
     min-height: 100vh;
     display: flex;
